Dropped scroll snap due to issue on iOS

--- a/project_folder/static/styles/out.css
+++ b/project_folder/static/styles/out.css
@@ -680,6 +680,22 @@ h2 {
   top: 0px;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -728,16 +744,16 @@ h2 {
   margin-bottom: 0.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-12 {
@@ -794,6 +810,10 @@ h2 {
 
 .mr-10 {
   margin-right: 2.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .block {
@@ -904,8 +924,20 @@ h2 {
   max-width: 450px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
+.max-w-0 {
+  max-width: 0rem;
+}
+
 .origin-bottom {
   transform-origin: bottom;
+}
+
+.origin-right {
+  transform-origin: right;
 }
 
 .translate-y-\[-50\%\] {
@@ -928,13 +960,23 @@ h2 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-x-100 {
+  --tw-scale-x: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-x-0 {
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 @-webkit-keyframes bounce_left {
   0%, 100% {
     transform: translateX(0px);
   }
 
   50% {
-    transform: translateX(10px);
+    transform: translateX(-10px);
   }
 }
 
@@ -944,7 +986,7 @@ h2 {
   }
 
   50% {
-    transform: translateX(10px);
+    transform: translateX(-10px);
   }
 }
 
@@ -955,10 +997,6 @@ h2 {
 
 .snap-x {
   scroll-snap-type: x var(--tw-scroll-snap-strictness);
-}
-
-.snap-y {
-  scroll-snap-type: y var(--tw-scroll-snap-strictness);
 }
 
 .snap-proximity {
@@ -1019,12 +1057,12 @@ h2 {
   justify-content: space-between;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-2 {
@@ -1163,6 +1201,18 @@ h2 {
   padding: 2rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1188,6 +1238,11 @@ h2 {
   padding-bottom: 0.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1203,24 +1258,9 @@ h2 {
   padding-bottom: 6px;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pr-\[2\.8rem\] {
@@ -1235,8 +1275,8 @@ h2 {
   padding-bottom: 1rem;
 }
 
-.pb-44 {
-  padding-bottom: 11rem;
+.pb-36 {
+  padding-bottom: 9rem;
 }
 
 .pl-32 {
@@ -1261,6 +1301,22 @@ h2 {
 
 .pb-16 {
   padding-bottom: 4rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
+.pb-40 {
+  padding-bottom: 10rem;
+}
+
+.pb-48 {
+  padding-bottom: 12rem;
 }
 
 .text-left {
@@ -1347,14 +1403,6 @@ h2 {
   line-height: 1.25rem;
 }
 
-.leading-4 {
-  line-height: 1rem;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
 .tracking-\[0\.2rem\] {
   letter-spacing: 0.2rem;
 }
@@ -1375,16 +1423,16 @@ h2 {
   letter-spacing: 0.12rem;
 }
 
-.tracking-\[0\.20rem\] {
-  letter-spacing: 0.20rem;
+.tracking-\[0\.10rem\] {
+  letter-spacing: 0.10rem;
 }
 
 .tracking-\[0\.1rem\] {
   letter-spacing: 0.1rem;
 }
 
-.tracking-\[0\.10rem\] {
-  letter-spacing: 0.10rem;
+.tracking-\[0\.20rem\] {
+  letter-spacing: 0.20rem;
 }
 
 .text-gray-200 {
@@ -1425,30 +1473,17 @@ h2 {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
+.text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-prim\/20 {
   color: rgb(179 254 213 / 0.2);
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .text-prim\/80 {
   color: rgb(179 254 213 / 0.8);
-}
-
-.text-prim\/50 {
-  color: rgb(179 254 213 / 0.5);
-}
-
-.text-prim\/60 {
-  color: rgb(179 254 213 / 0.6);
 }
 
 .opacity-40 {
@@ -1467,12 +1502,16 @@ h2 {
   opacity: 0.25;
 }
 
-.opacity-50 {
-  opacity: 0.5;
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.opacity-60 {
-  opacity: 0.6;
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .backdrop-blur-md {
@@ -1497,6 +1536,14 @@ h2 {
   transition-property: left;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.delay-100 {
+  transition-delay: 100ms;
+}
+
+.delay-200 {
+  transition-delay: 200ms;
 }
 
 .duration-300 {
@@ -1533,6 +1580,20 @@ input[type=email], textarea, textarea:focus {
   width: 100%;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: white;
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 #project-scroller {
   -ms-overflow-style: none;
   scrollbar-width: 0;
@@ -1557,6 +1618,25 @@ input[type=email], textarea, textarea:focus {
 }
 
 .hover\:text-prim:hover {
+  --tw-text-opacity: 1;
+  color: rgb(179 254 213 / var(--tw-text-opacity));
+}
+
+.active\:border-prim:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(179 254 213 / var(--tw-border-opacity));
+}
+
+.active\:bg-bg:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 26 26 / var(--tw-bg-opacity));
+}
+
+.active\:fill-bg:active {
+  fill: #1a1a1a;
+}
+
+.active\:text-prim:active {
   --tw-text-opacity: 1;
   color: rgb(179 254 213 / var(--tw-text-opacity));
 }
@@ -1658,14 +1738,6 @@ input[type=email], textarea, textarea:focus {
     gap: 0.5rem;
   }
 
-  .lg\:gap-12 {
-    gap: 3rem;
-  }
-
-  .lg\:gap-16 {
-    gap: 4rem;
-  }
-
   .lg\:gap-10 {
     gap: 2.5rem;
   }
@@ -1712,14 +1784,6 @@ input[type=email], textarea, textarea:focus {
 
   .lg\:tracking-wider {
     letter-spacing: 0.05em;
-  }
-
-  .lg\:text-\[\#222222\]\/25 {
-    color: rgb(34 34 34 / 0.25);
-  }
-
-  .lg\:text-\[\#222222\]\/40 {
-    color: rgb(34 34 34 / 0.4);
   }
 
   .lg\:text-\[\#222222\]\/50 {
