--- a/project_folder/static/styles/src.css
+++ b/project_folder/static/styles/src.css
@@ -24,6 +24,19 @@ input[type=email], textarea, textarea:focus {
   width: 100%;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: white;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 #project-scroller {
   -ms-overflow-style: none;
   scrollbar-width: 0;
